--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,4 +1,4 @@
-name: Generate Custom Pacman
+name: Generate Real Pacman Heatmap
 
 on:
   schedule:
@@ -20,14 +20,19 @@ jobs:
         with:
           node-version: 18
 
+      - name: Install deps
+        run: npm install
+
       - name: Generate SVG
         run: node scripts/generate-pacman.js
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
-      - name: Commit SVG
+      - name: Push to output branch
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git checkout -b output || git checkout output
+          git checkout -B output
           git add pacman-contribution-graph.svg
-          git commit -m "Update pacman animation" || echo "No changes"
+          git commit -m "Update Pacman Heatmap" || echo "No changes"
           git push origin output --force
