--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "pacman-generator",
+  "name": "pacman-heatmap",
+  "version": "1.0.0",
   "dependencies": {
     "node-fetch": "^2.6.7"
   }
